# HomePC

./: .gitignore
Byte/: Подключение монитора.txt  Системный разъём.txt
Byte/OsciSTM32/sources/: CMakeLists.txt
Byte/OsciSTM32/sources/Device/: CMakeLists.txt  Device.uvguix.Sasha7b9  Device.uvoptx  Device.uvprojx
Byte/OsciSTM32/sources/Device/src/: defines.h  main.cpp
Byte/OsciSTM32/sources/Device/src/Display/: Colors.cpp  Colors.h  Display.cpp  Display.h  Primitives.cpp  Primitives.h
Byte/OsciSTM32/sources/Device/src/Display/Font/: Font.cpp  Font.h  font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp
Byte/OsciSTM32/sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_FMC.cpp  HAL_GPIO.cpp  HAL_I2C.cpp  HAL_IT.cpp  HAL_LTDC.cpp  HAL_SDRAM.cpp  HAL_UART1.cpp  stm32746g_sdram.cpp  stm32746g_sdram.h  stm32f7xx_hal_conf.h
Byte/OsciSTM32/sources/Device/src/Hardware/Touch/: TS_I2C.cpp  TS_I2C.h  Touch.cpp  Touch.h
Byte/OsciSTM32/sources/scripts/keil/: edit.bat
Byte/OsciSTM32/sources/scripts/vs_keil/: assembly.bat  edit.bat
Byte/doc/: i8080_OpCodes.xls
Byte/Отладчик/: Детали.txt  Отладчик.vsdx
Byte/Отладчик/Комплектация/: links.txt
Byte/Отладчик/Схема/DebuggerByte/: DebbuggerByte.PrjPcb  DebbuggerByte.PrjPcbStructure  DebuggerByte.SchDoc
Byte/Ремонт/: IDENemo2004.doc  [[[ПОЛНОЙ]]] СХЕМЫ   FINAL.rar  БАЙТ ПРОВОДНИКИ   (шрифт system).txt  Описание работы.txt  СХЕМА_БАЙТ_БЕЗ_ОШИБОК_ЦВЕТНАЯ_ДОРАБОТАННАЯ_03_02_2022_не_менялось.rar  Системный разъём.txt
Byte/Ремонт/INTT1/: desc.txt
Byte/Эмулятор ПЗУ/: links.txt  Поддерживаемые ПЗУ.txt  Список комплектующих.txt
Radio86/doc/: links.txt
Radio86/doc/Радио/: links.txt
UT-88/doc/: links.txt  ЮТ-88_1.xlsx
UT-88/doc/Books/Юный техник/: utpr8902.djvu  utpr9002.djvu
doc/: Cписок_микросхем_по_схемам.txt  i8080mnemo.rar  Микросхемы_цены.xlsx  Общий список микросхем.txt  План.txt
doc/Z80/: i8080_OpCodes.xls  links.txt
Специалист/: Микросхемы.txt
(+1 files in other folders)
